clusters/talos-cluster/metube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: metube
spec:
  selector:
    app: metube
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
