clusters/talos-cluster/metube/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube-route
  namespace: metube
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "metube.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: metube
          port: 80
